Fix text align on header and .start

--- a/css/styles.css
+++ b/css/styles.css
@@ -190,6 +190,7 @@ header .inner-column {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 header h1 a:hover {
@@ -216,6 +217,7 @@ header h1 a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     /*border: 1px solid red;*/
 }
 .welcome .text-content .start .winner {
